<resources>
    <string name="app_name">FindMyFilm</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="ratings">Ratings</string>
    <string name="title_play">Title Play</string>
    <string name="title_up">Title Up</string>
    <string name="date">date</string>
    <string name="year">year</string>
</resources>